--- a/style.css
+++ b/style.css
@@ -45,13 +45,23 @@ h3 {
 }
 
 p {
-	text-align: left;
 	color: #AAAAAA;
 	font-family: 'PT Serif', 'PTSerif-Regular', Serif;
+	text-align: left;
 }
 
 p a {
 	color: #E2494C;
+}
+
+.dropdown_content {
+	display: none;
+    position: absolute;
+}
+
+.dropdown_content a {
+	display: block;
+	margin: 16px 48px 0 32px;
 }
 
 .flex_col {
@@ -105,6 +115,16 @@ p a {
 	font-style: italic;
 }
 
+#dropdown {
+	display: inline-block;
+}
+
+#dropdown:hover .dropdown_content {
+	background-color: #E2494C;
+	border-radius: 10px;
+	display: block;
+}
+
 #footer {
 	background-color: #DDDDDD;
 	color: #999999;
@@ -148,12 +168,17 @@ p a {
 	margin: 0 5%;
 }
 
+#menu_alt {
+	display: none;
+}
+
 #menu_bar {
 	background: #E2494C;
 	border-radius: 10px;
 	flex-grow: 3;
 	justify-content: space-around;
-	margin-right: 25px;
+	margin-right: 10px;
+	padding: 0 15px;
 }
 
 #menu_bar li {
@@ -198,4 +223,74 @@ p a {
   font-weight: 200;
   src: local('PT Serif'), local('PTSerif-Regular'), url(https://fonts.gstatic.com/s/ptserif/v8/I-OtoJZa3TeyH6D9oli3ifesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
+@media only screen and (max-width: 768px) {
+	h2:before, h2:after {
+		width: 30%;
+	}
+
+	h2:before {
+		margin-left: -30%;
+	}
+
+	h2:after {
+		margin-right: -30%;
+	}
+	.flex_container {
+		flex-direction: column !important;
+		display: inherit;
+	}
+	
+	#dropdown_content {
+		right: 60px;
+	}
+	
+	#footer span {
+		display: block;
+	}
+	
+	#header {
+		align-items: center;
+		flex-direction: row !important;
+		padding-left: 8px;
+	}
+	
+	#menu_alt {
+		display: block;
+	}
+	
+	#menu_alt img {
+		margin-right: 16px;
+		max-height: 32px;
+	}
+	
+	#menu_alt:hover + #menu_bar, #menu_bar:hover, #dropdown:hover, #dropdown_content:hover {
+		display: flex;
+		position: absolute;
+		right: 0;
+		top: 60px;
+	}
+	
+	#menu_bar {
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 412px) {
+	h2:before, h2:after {
+		width: 15%;
+	}
+
+	h2:before {
+		margin-left: -15%;
+	}
+
+	h2:after {
+		margin-right: -15%;
+	}
+	
+	#title {
+		margin-left: 0;
+	}
 }
